kubernetes/EKS/ExternalDNS/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment-dns
  name: nginx-deployment-dns
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-deployment-dns
  type: NodePort
